--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
-
+	<meta name="google-site-verification" content="SBcuc9agvzqZO82xL_GB8vMpW6nYIBDsn9_UrsvqhMo" />
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
