--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Admin AM | Iniciar Sesi&oacute;</title>
+  <title>Admin AM | Iniciar Sesi&oacute;n</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.6 -->
@@ -17,7 +17,8 @@
   <!-- iCheck -->
   <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
   
-
+  <!-- Animate.css -->
+	<link rel="stylesheet" href="../css/animate.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -35,11 +36,11 @@
 <body class="hold-transition login-page" style="background-image:url('img/fondo.jpg');">
 <div class="login-box">
   <div class="login-logo">
-    <a href="index2.html" style="color:#bf9e19;"><b>Admin</b>AM</a>
+    <a href="index2.html" style="color:white;"><b>Admin</b>AM</a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
-    <p class="login-box-msg">Inicio de Seci&oacute;n</p>
+    <p class="login-box-msg" style="color: #ffffff;">Inicio de Seci&oacute;n</p>
 
     <form id="formu" onsubmit="authUser(); return false;">
       <div class="form-group has-feedback">
@@ -56,7 +57,7 @@
         </div>
         <!-- /.col -->
         <div class="col-xs-5">
-          <input type="submit" class="btn btn-block" value="Iniciar Sesi&oacute;n" style="background-color:#bf9e19; color:white;">
+          <input type="submit" class="btn btn-block" value="Iniciar Sesi&oacute;n" style="background-color:gray; color:white;">
         </div>
         <!-- /.col -->
       </div>
@@ -65,14 +66,29 @@
    
     <!-- /.social-auth-links -->
     
-    <div style="margin-top:30px;">
-      <a href="register.html" class="text-center">Recuperar Contraseña</a>
+    <div class="form-group has-feedback">
+      <a href="#rc" onclick="recuperarStayle();" class="text-center" style="font-size:17px; color: #ffffff;">Recuperar Contraseña</a>
     </div>
+    <div id="stDisRc" style="display:none;" class="animated fideInDown">
+      <p style="color:white;">Ingresa tu correo eléctronico y te la  enviaremos a tu correo</p>
+      <form id="formu" onsubmit="authUser(); return false;">
+        <input type="text" name="user" class="form-control" placeholder="Correo El&eacute;ctronico">
+        <input type="submit" class="btn btn-block" value="Recuperar" style="background-color:gray; color:white; margin-top: 10px;">
+      </form>
+    </div>
+   
 
   </div>
   <!-- /.login-box-body -->
 </div>
 <!-- /.login-box -->
+
+<script>
+  
+  function recuperarStayle(){
+    document.getElementById('stDisRc').style.display = 'block';
+  }
+</script>
 
 </body>
 </html>
