--- a/public/admin/indexAdmin.html
+++ b/public/admin/indexAdmin.html
@@ -42,14 +42,14 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="indexAdmin.html" class="logo" style="background-color: #9e851e;">
+    <a href="indexAdmin.html" class="logo" style="background-color: #656463;">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>M</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>Antifraud</b>Minds</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
-    <nav class="navbar navbar-static-top" style="background-color: #c5a628;">
+    <nav class="navbar navbar-static-top" style="background-color: #383838;">
       <!-- Sidebar toggle button-->
       <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
         <span class="sr-only">Toggle navigation</span>
