--- a/public/psicologia.html
+++ b/public/psicologia.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Antifraud Minds | Web-side</title>
+	<title>Antifraud Minds</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="description" content="Antifraud minds " />
+	<meta name="keywords" content="seguridad, antifraude, empresas" />
+	<meta name="author" content="kalpani.com" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -64,7 +64,7 @@
 				
 				<div class="col-xs-12 text-right menu-1">
 					<ul style="text-align: center;">
-						<li><a style="border-bottom: 2px solid white;" href="psicologia.html">PSICOLOGÍA DEL FRAUDE</a></li>
+						<li><a style="border-bottom: 2px solid white; padding: 22px 10px;" href="psicologia.html">PSICOLOGÍA DEL FRAUDE</a></li>
 						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
 						<li><a href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
