--- a/public/admin/saEnviarSolicitud.html
+++ b/public/admin/saEnviarSolicitud.html
@@ -129,7 +129,17 @@
             <li class="active"><a href="saVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
           </ul>
         </li>
-       
+        <li class=" treeview">
+          <a href="#">
+            <i class="fa fa-envelope"></i> <span>Mensajes</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="verMensajes.html"><i class="fa fa-circle-o"></i>Ver Mensajes</a></li>
+          </ul>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
@@ -154,7 +164,7 @@
     <section class="content">
       <div class="row">
         <div class="col-md-3">
-          <a href="suVerSolicitudesAll.html" class="btn btn-primary btn-block margin-bottom">Ver Solicitud</a>
+          <a href="saVerSolicitudesAll.html" class="btn btn-primary btn-block margin-bottom">Ver Solicitud</a>
 
           <div class="box box-solid">
             <div class="box-header with-border">
@@ -167,7 +177,7 @@
             </div>
             <div class="box-body no-padding">
               <ul class="nav nav-pills nav-stacked">
-                <li class=""><a href="suVerSolicitudesAll.html"><i class="fa fa-inbox"></i>Enviadas</a></li>
+                <li class=""><a href="saVerSolicitudesAll.html"><i class="fa fa-inbox"></i>Enviadas</a></li>
                 
               </ul>
             </div>
