--- a/public/admin/suEnviarSolicitud.html
+++ b/public/admin/suEnviarSolicitud.html
@@ -104,7 +104,7 @@
             <li class="active"><a href="suVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
           </ul>
         </li>
-        <li><a href="#"><i class="fa fa-circle-o text-aqua" style="color: #c5a628 !important;"></i> <span>Contactenos</span></a></li>
+        <li><a href="suEnviarMensaje.html"><i class="fa fa-circle-o text-aqua" style="color: white !important;"></i> <span>Contactenos</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
