--- a/public/admin/saVerSolicitudesAll.html
+++ b/public/admin/saVerSolicitudesAll.html
@@ -126,7 +126,17 @@
             <li class="active"><a href="saVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
           </ul>
         </li>
-       
+        <li class=" treeview">
+          <a href="#">
+            <i class="fa fa-envelope"></i> <span>Mensajes</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="verMensajes.html"><i class="fa fa-circle-o"></i>Ver Mensajes</a></li>
+          </ul>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
