--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -48,7 +48,7 @@
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="text" name="pass" class="form-control" placeholder="Contraseña">
+        <input type="password" name="pass" class="form-control" placeholder="Contraseña">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
