--- a/public/admin/saVerSolicitudesAll.html
+++ b/public/admin/saVerSolicitudesAll.html
@@ -161,7 +161,7 @@
     <section class="content">
       <div class="row">
         <div class="col-md-3">
-          <a href="saEnviarSolicitud.html" class="btn btn-primary btn-block margin-bottom">Crear solicitud</a>
+          <a href="saResponderSolicitud.html" class="btn btn-primary btn-block margin-bottom">Crear solicitud</a>
 
           <div class="box box-solid">
             <div class="box-header with-border">
@@ -477,7 +477,8 @@ function renderSolicitudes(solicitudes) {
   tableContentSolicitudes.innerHTML = contentStr;
   for (var i = 0; i < solicitudes.length; i++) {
     var solicitud = solicitudes[i];
-    contentStr += '<tr><td></td><td class="mailbox-star"><i class="fa fa-circle text-success"></i></td><td class="mailbox-name"><a href="saVerSolicitud.html?idSolicitud='+solicitud.id+'">'+solicitud.nombre+'</a></td><td class="mailbox-subject">'+solicitud.tituloSolicitud+'</td><td class="mailbox-attachment"><a href="'+solicitud.urlArchivo+'" target="_blank"><i class="fa fa-paperclip"></i></a></td><td class="mailbox-date">'+formatFecha(solicitud.fecha)+'</td></tr>';
+    var fileAttachment = solicitud.urlArchivo.length > 0 ? '<a href="'+solicitud.urlArchivo+'" target="_blank"><i class="fa fa-paperclip"></i></a>' : '';
+    contentStr += '<tr><td></td><td class="mailbox-star"><i class="fa fa-circle text-success"></i></td><td class="mailbox-name"><a href="suVerSolicitud.html?idSolicitud='+solicitud.id+'">'+solicitud.nombre+'</a></td><td class="mailbox-subject">'+solicitud.tituloSolicitud+'</td><td class="mailbox-attachment">' + fileAttachment +  '</td><td class="mailbox-date">'+formatFecha(solicitud.fecha)+'</td></tr>';
   }
   tableContentSolicitudes.innerHTML = contentStr;
   /**
