Arreglando respuesta.. avoid extra result

--- a/public/admin/saVerSolicitud.html
+++ b/public/admin/saVerSolicitud.html
@@ -517,7 +517,7 @@ function manageRespuesta() {
 }
 
 function renderRespuesta(respuestas) {
-  if (respuestas.length > 0) {
+  if (respuestas[0].length > 0) {
     hasRespuesta = true;
     $("#btnRespuesta").html("Ver Respuesta");
   } else {
