--- a/public/admin/saVerSolicitud.html
+++ b/public/admin/saVerSolicitud.html
@@ -222,7 +222,7 @@
             <div class="box-footer">
               <button type="button" class="btn btn-default"><i class="fa fa-trash-o" onclick="deleteSolicitud();"></i> Delete</button>
               <button type="button" class="btn btn-default"><i class="fa fa-print" onclick="window.print();"></i> Print</button>
-              <button type="button" class="btn btn-default"><i class="fa fa-print" onclick="manageRespuesta();" id="btnRespuesta"></i> Respuesta</button>
+              <button type="button" class="btn btn-default"><i class="fa fa-print" onclick="manageRespuesta();"></i><label id="btnRespuesta">Respuesta</label> </button>
             </div>
             <!-- /.box-footer -->
           </div>
