--- a/public/admin/suVerSolicitud.html
+++ b/public/admin/suVerSolicitud.html
@@ -186,7 +186,7 @@
             <div class="box-footer">
               <button type="button" class="btn btn-default" onclick="deleteSolicitud();"><i class="fa fa-trash-o"></i> Delete</button>
               <button type="button" class="btn btn-default" onclick="window.print();"><i class="fa fa-print"></i> Print</button>
-              <button type="button" class="btn btn-default"><i class="fa fa-print" onclick="manageRespuesta();" id="btnRespuesta"></i> Respuesta</button>
+              <button type="button" class="btn btn-default"><i class="fa fa-print" onclick="manageRespuesta();" ></i><label id="btnRespuesta">Respuesta</label> </button>
             </div>
             <!-- /.box-footer -->
           </div>
