--- a/public/admin/saVerSolicitud.html
+++ b/public/admin/saVerSolicitud.html
@@ -220,9 +220,9 @@
             </div>
             <!-- /.box-footer -->
             <div class="box-footer">
-              <button type="button" class="btn btn-default"><i class="fa fa-trash-o" onclick="deleteSolicitud();"></i> Delete</button>
-              <button type="button" class="btn btn-default"><i class="fa fa-print" onclick="window.print();"></i> Print</button>
-              <button type="button" class="btn btn-default"><i class="fa fa-print" onclick="manageRespuesta();"></i><label id="btnRespuesta">Respuesta</label> </button>
+              <button type="button" class="btn btn-default" onclick="deleteSolicitud();"><i class="fa fa-trash-o" ></i> Delete</button>
+              <button type="button" class="btn btn-default" onclick="window.print();"><i class="fa fa-print" ></i> Print</button>
+              <button type="button" class="btn btn-default" onclick="manageRespuesta();"><i class="fa fa-print" ></i><label id="btnRespuesta">Respuesta</label> </button>
             </div>
             <!-- /.box-footer -->
           </div>
