Cambiando id por idServicio

--- a/public/admin/saResponderSolicitud.html
+++ b/public/admin/saResponderSolicitud.html
@@ -425,7 +425,7 @@ function loadSolicitud(idSolicitud) {
 
 function loadServicio(idServicio) {
     var servicioManager = new ServiciosManager();
-    servicioManager.get(id, function (rm) {
+    servicioManager.get(idServicio, function (rm) {
       renderServicios(rm.getObject());
     }, function (rm) {
       console.log(rm);
