--- a/public/admin/saVerSolicitud.html
+++ b/public/admin/saVerSolicitud.html
@@ -457,6 +457,7 @@
 
 var currentCliente = null;
 var currentSolicitud = null;
+var currentRespuesta = null;
   
   
   $(document).ready(function () {
@@ -512,13 +513,14 @@ function manageRespuesta() {
       window.location.href = "saResponderSolicitud.html?idSolicitud=" + currentSolicitud.id;
     }
   } else {
-    window.location.href = "saVerSolicitud.html?idSolicitud=" + currentSolicitud.id;
+    window.location.href = "saVerSolicitud.html?idSolicitud=" + currentRespuesta[currentRespuesta.length - 1].idRespuesta;
   }
 }
 
 function renderRespuesta(respuestas) {
   if (respuestas.length > 0) {
     hasRespuesta = true;
+    currentRespuesta = respuestas;
     $("#btnRespuesta").html("Ver Respuesta");
   } else {
     hasRespuesta = false;
