Agregando soporte a enviar correos electrónicos

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -71,7 +71,7 @@
     </div>
     <div id="stDisRc" style="display:none;" class="animated fideInDown">
       <p style="color:white;">Ingresa tu correo eléctronico y te la  enviaremos a tu correo</p>
-      <form id="formu" onsubmit="authUser(); return false;">
+      <form id="formurecover" onsubmit="recuperarPass(this); return false;">
         <input type="text" name="user" class="form-control" placeholder="Correo El&eacute;ctronico">
         <input type="submit" class="btn btn-block" value="Recuperar" style="background-color:gray; color:white; margin-top: 10px;">
       </form>
