--- a/public/admin/saVerSolicitud.html
+++ b/public/admin/saVerSolicitud.html
@@ -222,7 +222,7 @@
             <div class="box-footer">
               <button type="button" class="btn btn-default" onclick="deleteSolicitud();"><i class="fa fa-trash-o" ></i> Delete</button>
               <button type="button" class="btn btn-default" onclick="window.print();"><i class="fa fa-print" ></i> Print</button>
-              <button type="button" class="btn btn-default" onclick="manageRespuesta();"><i class="fa fa-print" ></i><label id="btnRespuesta">Respuesta</label> </button>
+              <button type="button" class="btn btn-default" onclick="manageRespuesta();" style="margin-left: 40px; background: #2c9e2c; color: white; font-size: 12px; font-family: sans-serif; line-height: 14px; padding: 8px;"><i class="fa icon-envelope" style="padding-right: 10px;"></i><label id="btnRespuesta" style="display: inline-block; max-width: 100%; font-weight: 600;">Respuesta</label> </button>
             </div>
             <!-- /.box-footer -->
           </div>
