grilla ver usuarios cerrar sesion

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -40,7 +40,7 @@
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
-    <p class="login-box-msg" style="color: #ffffff;">Inicio de Seci&oacute;n</p>
+    <p class="login-box-msg" style="color: #ffffff;">Inicio de Sesi&oacute;n</p>
 
     <form id="formu" onsubmit="authUser(); return false;">
       <div class="form-group has-feedback">
