--- a/public/admin/indexAdmin.html
+++ b/public/admin/indexAdmin.html
@@ -69,8 +69,8 @@
                 <img id="logoPopup" src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  <label id="nombrePopup">asdfaasdfSeguros Bolivar</label>
-                  <small id="ciudadPopup">fasdfsadfBogot&aacute;</small>
+                  <label id="nombrePopup">Antifraud</label>
+                  <small id="ciudadPopup">Bogot&aacute;</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -172,7 +172,7 @@
           <div class="box box-widget widget-user">
             <!-- Add the bg color to the header using any of the bg-* classes -->
             <div class="widget-user-header bg-black" style="background: url('img/fondo.jpg') center center;">
-              <h3 class="widget-user-username" id="nombre">Seguros Bolivar</h3>
+              <h3 class="widget-user-username" id="nombre">Antifraud Minds</h3>
               <h5 class="widget-user-desc" id="ciudad">Bogot&aacute;</h5>
             </div>
             <div class="widget-user-image">
