--- a/public/admin/agregarAliado.html
+++ b/public/admin/agregarAliado.html
@@ -61,16 +61,16 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="dist/img/user1-128x128.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Seguros Bolivar</span>
+              <span class="hidden-xs">Antifraud Minds</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header" style="background-image: url(img/fondo.jpg);">
-                <img src="dist/img/user1-128x128.jpg" class="img-circle" alt="User Image">
+                <img id="logoPopup" src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Seguros Bolivar
-                  <small>Bogot&aacute;</small>
+                  <label id="nombrePopup">Antifraud</label>
+                  <small id="ciudadPopup">Bogot&aacute;</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -81,7 +81,7 @@
                   
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-primary btn-flat">Cerrar Sesi&oacute;n</a>
+                  <a href="#" class="btn btn-primary btn-flat" onclick="logout();">Cerrar Sesi&oacute;n</a>
                 </div>
               </li>
             </ul>
@@ -577,6 +577,8 @@
 <script src="dist/js/demo.js"></script>
 <script src="../js/bannersManager.js"></script>
 <script src="../js/responsemanager.js"></script>
+<script  type="text/javascript" src="../js/usuariomanager.js"></script>
+<script  type="text/javascript" src="js/login.js"></script>
 
 
 <script type="text/javascript">
@@ -625,9 +627,31 @@
   
   
   $(document).ready(function () {
-  loadBanners();
-});  
-var currentBanners = [];
+    loadBanners();
+    isLogued();
+  });
+  
+  postLogin = function (cliente) {
+    renderData(cliente);
+  }
+  
+  function renderData(cliente) {
+    $("#nombre").html(cliente.nombre);
+    $("#ciudad").html(cliente.ciudad);
+    $("#logo").attr("src", cliente.logo);
+    $(".user-image").attr("src", cliente.logo);
+    $("#nombreMini").html(cliente.nombre);
+    $("#nombrePopup").html(cliente.nombre);
+    $("#ciudadPopup").html(cliente.ciudad);
+    $("#logoPopup").attr("src", cliente.logo);
+  }
+  
+  postLogout = function (data) {
+    window.location.href = "/admin/index.html";
+  }
+  
+  var currentBanners = [];
+  
   function loadBanners() {
     var bannersManager = new BannersManager();
     bannersManager.obtener(function (rm) {
