--- a/public/admin/crearUsuario.html
+++ b/public/admin/crearUsuario.html
@@ -39,7 +39,6 @@
   
   <script  type="text/javascript" src="js/jquery.min.js"></script>
   <script  type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script  type="text/javascript" src="js/login.js"></script>
   <script  type="text/javascript" src="js/users.js"></script>
   <script  type="text/javascript" src="../js/responsemanager.js"></script>
   <script  type="text/javascript" src="../js/usuariomanager.js"></script>
@@ -71,17 +70,17 @@
           
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Seguros Bolivar</span>
+              <img src="dist/img/user1-128x128.jpg" class="user-image" alt="User Image">
+              <span class="hidden-xs">Antifraud Minds</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header" style="background-image: url(img/fondo.jpg);">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img id="logoPopup" src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Seguros Bolivar
-                  <small>Bogot&aacute;</small>
+                  <label id="nombrePopup">Antifraud</label>
+                  <small id="ciudadPopup">Bogot&aacute;</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -92,7 +91,7 @@
                   
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-primary btn-flat">Cerrar Sesi&oacute;n</a>
+                  <a href="#" class="btn btn-primary btn-flat" onclick="logout();">Cerrar Sesi&oacute;n</a>
                 </div>
               </li>
             </ul>
@@ -301,6 +300,7 @@
 <script src="dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
+<script  type="text/javascript" src="js/login.js"></script>
 
 <script type="text/javascript">
   var data = {};
@@ -308,7 +308,27 @@
   
   $(document).ready(function() {
     loadServicios();
+    isLogued();
   });
+  
+  postLogin = function (cliente) {
+    renderData(cliente);
+  }
+  
+  function renderData(cliente) {
+    $("#nombre").html(cliente.nombre);
+    $("#ciudad").html(cliente.ciudad);
+    $("#logo").attr("src", cliente.logo);
+    $(".user-image").attr("src", cliente.logo);
+    $("#nombreMini").html(cliente.nombre);
+    $("#nombrePopup").html(cliente.nombre);
+    $("#ciudadPopup").html(cliente.ciudad);
+    $("#logoPopup").attr("src", cliente.logo);
+  }
+  
+  postLogout = function (data) {
+    window.location.href = "/admin/index.html";
+  }
   
   function loadServicios() {
     var servicioManager = new ServiciosManager();
@@ -428,7 +448,13 @@ function removeElementFromArray(array, element) {
   }  
   return newarray;
 }
-
+function toogleMenu() {
+  if ($(".dropdown-menu").is(":hidden")) {
+    $(".dropdown-menu").show();  
+  } else {
+    $(".dropdown-menu").hide();
+  }
+}
 
 </script>
 </body>
