--- a/public/index.html
+++ b/public/index.html
@@ -84,11 +84,11 @@
 
 					<div class="row row-mt-15em">
 						<figure class="logo animated fadeInDown delay-07s" style="width: 100%;text-align: center; margin-top: 42px;">
-				        	<a href="index.html"><img src="../img/logo.svg" alt="" style="width: 400px;"></a>
+				        	<a href="index.html"><img src="../img/logo.svg" alt="" style="width: 700px;"></a>
 				        	<div class="we-create animated fadeInUp delay-1s" style="text-align: center; color: white;"> Mentes Antifraude.</div>
 				        </figure>	
 				        <h1 class="animated fadeInDown delay-07s" style="color:#ffffff;text-shadow: 1px 1px black;text-align: center;">Bienvenidos a Antifraud Minds</h1>
-				        <div class="we-create animated fadeInUp delay-1s" style="text-align: center; color: white;"> La primera empresa Colombiana antifraude.</div>
+				        <div class="we-create animated fadeInUp delay-1s" style="text-align: center; color: white;">Empresa Colombiana pionera en la innovación antifraude.</div>
 					</div>
 							
 					
