--- a/public/termino.html
+++ b/public/termino.html
@@ -88,7 +88,7 @@
 				        	<div class="we-create animated fadeInUp delay-1s" style="text-align: center; color: white;"> Mentes Antifraude.</div>
 				        </figure>	
 				        <h1 class="animated fadeInDown delay-07s" style="color:#ffffff;text-shadow: 1px 1px black;text-align: center;">Bienvenidos a Antifraud Minds</h1>
-				        <div class="we-create animated fadeInUp delay-1s" style="text-align: center; color: white;"> La primera empresa Colombiana antifraude.</div>
+				        <div class="we-create animated fadeInUp delay-1s" style="text-align: center; color: white;">Empresa Colombiana pionera en la innovación antifraude.</div>
 					</div>
 							
 					
