--- a/public/investigacion.html
+++ b/public/investigacion.html
@@ -65,7 +65,7 @@
 					<ul style="text-align: center;">
 						<li><a href="psicologia.html">PSICOLOGÍA DEL FRAUDE</a></li>
 						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
-						<li><a style="border-bottom: 2px solid white; padding: 22px 10px;" href="investigacion.html">INVESTIGACIÓN</a></li>
+						<li><a style="border-bottom: 2px solid white;" href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
 						<li><a href="contacto.html">CONTACTENOS</a></li>
 						<li><a href="admin/index.html">INICIAR SESÍON</a></li>
