--- a/public/psicologia.html
+++ b/public/psicologia.html
@@ -64,7 +64,7 @@
 				
 				<div class="col-xs-12 text-right menu-1">
 					<ul style="text-align: center;">
-						<li><a style="border-bottom: 2px solid white; padding: 22px 10px;" href="psicologia.html">PSICOLOGÍA DEL FRAUDE</a></li>
+						<li><a style="border-bottom: 2px solid white;" href="psicologia.html">PSICOLOGÍA DEL FRAUDE</a></li>
 						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
 						<li><a href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
