--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 
 					<div class="row row-mt-15em">
 						<figure class="logo animated fadeInDown delay-07s" style="width: 100%;text-align: center; margin-top: 42px;">
-				        	<a href="index.html"><img src="../img/logo.svg" alt="" style="width: 25%;"></a>
+				        	<a href="index.html"><img src="../img/logo.svg" alt="" class="size-logo"></a>
 				        	<div class="we-create animated fadeInUp delay-1s" style="text-align: center; color: white;"> Mentes Antifraude.</div>
 				        </figure>	
 				        <h1 class="animated fadeInDown delay-07s" style="color:#ffffff;text-shadow: 1px 1px black;text-align: center;">Bienvenidos a Antifraud Minds</h1>
