--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 				 				<div class="featured-box-col2 wow  contBtnContact_mobile" style="">
 			                       <h3 style="margin-left: 60px; margin-top: 36px;">Descarga:</h3>
 			                        <a href="">
-			                            <div style="width: 201px; margin: 0 auto; margin-top: 28px;">
+			                            <div class="btnDescarga" style="">
 			                                <img src="../img/appstore_button_google.png">
 			                            </div>
 			                        </a>
