banners index mobile 5

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 				 				<div class="featured-box-col2 wow  contBtnContact_mobile" style="">
 			                       <h3 style="margin-left: 60px; margin-top: 36px;">Descarga:</h3>
 			                        <a href="">
-			                            <div class="btnDescarga" style="">
+			                            <div class="btnDescarga" style="margin-bottom:20px;">
 			                                <img src="../img/appstore_button_google.png">
 			                            </div>
 			                        </a>
@@ -149,13 +149,14 @@
 			 		</div>
 			 		<div id="item2" style="display:none" class="animated fadeInLeft">
 			 			<div class="style_cont_row_item">
-			 				<h2>P.E.A.C.E “Una mejor opción; un mejor resultado”E</h2>
+			 				<h2>P.E.A.C.E</h2>
+			 				<h2>“Una mejor opción; un mejor resultado”E</h2>
 			 				<div style="border: 1px solid gray; width: 414px; padding: 10px;">
 			 					<img  src="../img/place.jpg" width="390px" alt="">
 			 				</div>
 			 			</div>	
 			 			<div class="style_cont_row_item">
-			 				
+			 				<br><br><br>
 			 				ANTIFRAUD MINDS SAS trae a Colombia esta técnica inglesa; es un modelo ideal para
 
 							entrevistar, orientado a ofrecer una alternativa más eficaz y ética de la entrevista para la
