banners index mobile 8

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
 				 			</div>
 				 		</div>
 			 		</div>
-			 		<div id="" style="display:none" class="style_cont_row animated fadeInLeft">
+			 		<div id="item2" style="display:none" class="style_cont_row animated fadeInLeft">
 			 			<div class="style_cont_row_item">
 			 				<h2>P.E.A.C.E</h2>
 			 				<h2>“Una mejor opción; un mejor resultado”E</h2>
