banners index mobile 9

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
 				<div class="style_cont_row"  style="">
 			 		<div id="item1" style="display:none" class="animated fadeInLeft">
 				 		<div style="">
-				 			<divclass="style_cont_row_item">
+				 			<div class="style_cont_row_item">
 				 				<img  src="../img/nexus.png" width="450" alt="">
 				 				<div class="featured-box-col2 wow  contBtnContact_mobile" style="">
 			                       <h3 style="margin-left: 60px; margin-top: 36px;">Descarga:</h3>
@@ -150,7 +150,7 @@
 			 		<div id="item2" style="display:none" class="style_cont_row animated fadeInLeft">
 			 			<div class="style_cont_row_item">
 			 				<h2>P.E.A.C.E</h2>
-			 				<h2>“Una mejor opción; un mejor resultado”E</h2>
+			 				<h2>“Una mejor opción; un mejor resultado”</h2>
 			 				<div style="border: 1px solid gray; width: 414px; padding: 10px;">
 			 					<img  src="../img/place.jpg" width="390px" alt="">
 			 				</div>
