links circular btn

--- a/public/termino.html
+++ b/public/termino.html
@@ -114,6 +114,10 @@
 						<ul class="gtco-footer-links">
 							<li><a href="https://antecedentes.policia.gov.co:7005/WebJudicial/"  style="color:white;">Policia Nacional</a></li>
 							<li><a href="http://siri.procuraduria.gov.co:8086/CertWEB/Certificado.aspx?tpo=1"  style="color:white;">Procuraduria</a></li>
+							<li><a href="http://cfiscal.contraloria.gov.co/siborinternet/certificados/certificadosPersonaNatural.asp"  style="color:white;">Contraloria</a></li>
+							<li><a href="http://www.fosyga.gov.co/BDUA/Consulta-Afiliados-BDUA"  style="color:white;">fosyga</a></li>
+							<li><a href="https://sanctionssearch.ofac.treas.gov/"  style="color:white;">O.F.A.C</a></li>
+							<li><a href="https://www.interpol.int/es/notice/search/wanted"  style="color:white;">Interpol</a></li>
 						</ul>
 						
 						<h3 style="color:white;">Blog</h3>
