--- a/public/contacto.html
+++ b/public/contacto.html
@@ -148,7 +148,8 @@
 						<h3>Información de contacto</h3>
 						<ul>
 							<li class="address">Calle 68 # 9 - 27 , <br> Bogotá - Colombia </li>
-							<li class="phone" ><a style="color:gray;" href="tel://1234567920"> +57 234 56 89</a></li>
+							<li class="phone" ><a style="color:gray;" href="tel://1234567920"> +57 350 452 26 80</a></li>
+							<li class="phone" ><a style="color:gray;" href="tel://1234567920"> Radio: 2204*4</a></li>
 							<li class="email" ><a style="color:gray;" href="mailto:info@yoursite.com">info@antifraudminds.com</a></li>
 						</ul>
 					</div>
@@ -159,7 +160,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="idIntUnoA" class="animated zoomIn" style="display:none; width:100%; height:1100px; position:fixed; background:#072708; z-index:9999999;top:0;">
+	<div id="idIntUnoA" class="animated zoomIn" style="display:none; width:100%; height:1100px; position:fixed; background:#007870; z-index:9999999;top:0;">
 		<div id="uno" class="tab-pane fade in active" style=" width:900px; height: 400px; margin: 0 auto; margin-top: 122px;">
 		  <a href="#Uno" onclick="exit2();" style="margin-left: 96%; font-size: 30px; color: white;">x</a>
 	       <h3 style="color:white; border-bottom:1px solid white;height:40px;">Quienes somos</h3>
@@ -240,7 +241,8 @@
 					<div class="gtco-widget">
 						<h3 style="color:white;">Contactenos</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 234 56 89</a></li>
+							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 350 452 26 80</a></li>
+							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> Radio: 2204*4</a></li>
 							<li><a href="#"  style="color:white;"><i  style="color:white;"class="icon-mail2"></i> info@antifraudminds.com</a></li>
 						</ul>
 					</div>
@@ -256,9 +258,9 @@
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i  style="color:white;" class="icon-twitter"></i></a></li>
-							<li><a href="#"><i  style="color:white;" class="icon-facebook"></i></a></li>
-							<li><a href="#"><i  style="color:white;" class="icon-linkedin"></i></a></li>
+							<li><a href="https://twitter.com/antifraudminds"><i  style="color:white;" class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/Antifraud-Minds-708109079352330/"><i  style="color:white;" class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/antifraud-minds-a6939413a/"><i  style="color:white;" class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
 				</div>
