--- a/public/termino.html
+++ b/public/termino.html
@@ -119,7 +119,6 @@
 							<li><a href="https://sanctionssearch.ofac.treas.gov/"  style="color:white;">O.F.A.C</a></li>
 							<li><a href="https://www.interpol.int/es/notice/search/wanted"  style="color:white;">Interpol</a></li>
 						</ul>
-						
 						<h3 style="color:white;">Blog</h3>
 						<ul class="gtco-footer-links">
 							<li><a href="https://www.blogger.com/"  style="color:white;">Blog Antifraud Minds</a></li>
@@ -131,7 +130,8 @@
 					<div class="gtco-widget">
 						<h3 style="color:white;">Contactenos</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 234 56 89</a></li>
+							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 350 452 26 80</a></li>
+							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> Radio: 2204*4</a></li>
 							<li><a href="#"  style="color:white;"><i  style="color:white;"class="icon-mail2"></i> info@antifraudminds.com</a></li>
 						</ul>
 					</div>
@@ -147,16 +147,16 @@
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i  style="color:white;" class="icon-twitter"></i></a></li>
-							<li><a href="#"><i  style="color:white;" class="icon-facebook"></i></a></li>
-							<li><a href="#"><i  style="color:white;" class="icon-linkedin"></i></a></li>
+							<li><a href="https://twitter.com/antifraudminds"><i  style="color:white;" class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/Antifraud-Minds-708109079352330/"><i  style="color:white;" class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/antifraud-minds-a6939413a/"><i  style="color:white;" class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
 				</div>
 			</div>
 
 		</div>
-		<div id="idIntUnoA" class="animated zoomIn" style="display:none; width:100%; height:1100px; position:fixed; background:#072708; z-index:9999999;top:0;">
+		<div id="idIntUnoA" class="animated zoomIn" style="display:none; width:100%; height:1100px; position:fixed; background:#007870; z-index:9999999;top:0;">
 		<div id="uno" class="tab-pane fade in active" style=" width:900px; height: 400px; margin: 0 auto; margin-top: 122px;">
 		  <a href="#Uno" onclick="exit2();" style="margin-left: 96%; font-size: 30px; color: white;">x</a>
 	       <h3 style="color:white; border-bottom:1px solid white;height:40px;">Quienes somos</h3>
