Agregando firma en reporte pdf poniendole el nombre ,bienla fecha

--- a/public/admin/pdf.html
+++ b/public/admin/pdf.html
@@ -1003,14 +1003,14 @@ height:140px;
 <b>FECHA:</b>
 </div>
 <div id="Untitled-1-06_">
-29-03-2017
+%fechaActual%
 </div>
 
 <div id="Untitled-1-08_">
 <b>LUGAR:</b>
 </div>
 <div id="Untitled-1-09_">
-BOGOTÁ
+%ciudadEmpresa%
 </div>
 
 <div id="Untitled-1-12_" style="border-bottom: 4PX solid gray;">
@@ -1029,7 +1029,7 @@ BOGOTÁ
 <b>NOMBRE:</b>
 </div>
 <div id="Untitled-1-23_">
-%nombre%
+%nombres%
 </div>
 
 <div id="Untitled-1-25_">
