Agregando firma en reporte pdf poniendole el nombre ,bienla fecha

--- a/public/admin/pdf.html
+++ b/public/admin/pdf.html
@@ -1106,7 +1106,7 @@ height:140px;
 
 
 <div id="Untitled-1-71_" style="font-size: 78px;">
-50%
+%porcentajeRiesgo%
 </div>
 
 <div id="Untitled-1-75_">
