--- a/public/admin/pdf.html
+++ b/public/admin/pdf.html
@@ -34,7 +34,7 @@
 		<div style="padding-top: 20px; ">
 			<b style="color: gray;">FOTO USUARIO VALIDADO:</b>
 		</div>
-		<div style="margin-top: 40px; width: 100px; height: 138px; background: gray; margin-bottom: 20px;">
+		<div style="margin-top: 40px; margin-bottom: 20px;">
 			%foto%
 		</div>
 		<div>
